removed logo from small screen

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -3,8 +3,8 @@
     <div id="header">
         <div class="grey-line">
         </div>
-        <div id="logo" class="light-version">
-            <a href="https://startupcommunity.org" target="_blank"><img src="/public/images/sc_logo.png"/></a>
+        <div id="logo" class="light-version" style="transition: all 0.4s ease 0s;">
+            <a ui-sref="community.dashboard({location_path: nav.location_path, community_path: '', community: nav.location, location: nav.location, query: '*'})"><img src="/public/images/sc_logo.png"/></a>
         </div>
         <nav role="navigation">
             <minimaliza-menu ng-if="!nav.embedded"></minimaliza-menu>
