--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -7,7 +7,7 @@
                 <div style="margin-top: -12px;">
                     <span ng-repeat="(item, val) in profile.user.roles" class="user-role" style="font-size: 24px;"><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" ng-class="{'pe-7s-paper-plane' : item == 'founder', 'pe-7s-flag' : item == 'leader', 'pe-7s-study' : item == 'mentor', 'pe-7s-gleam' : item == 'investor', 'pe-7s-ball' : item == 'team', 'pe-7s-portfolio' : item == 'provider'}"></i></span>
                 </div>
-                <h1>
+                <h1 style="overflow:hidden;">
                     {{profile.user.profile.headline || profile.user.profile.linkedin.headline}}
                 </h1>
                 <h3 style="padding-top: 5px;" style="line-height: 1.5;">
