--- a/app/less/various.less
+++ b/app/less/various.less
@@ -921,7 +921,7 @@ footer, .push {
 
 /* Sidebar Hide */
 
-body.hide-sidebar #menu {
+body.hide-sidebar #menu, body.hide-sidebar #logo {
   margin-left: -@menu-width;
 }
 
@@ -929,7 +929,7 @@ body.hide-sidebar .wrapper {
   margin-left: 0;
 }
 
-body.page-small #menu {
+body.page-small #menu, body.page-small #logo {
   margin-left: -@menu-width;
 }
 
@@ -937,7 +937,7 @@ body.page-small .wrapper {
   margin-left: 0;
 }
 
-body.page-small.show-sidebar #menu {
+body.page-small.show-sidebar #menu, body.page-small.show-sidebar #logo {
   margin-left: 0;
 }
 
