--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -28,7 +28,7 @@
                     <li ng-if="!nav.user" class="dropdown">
                         <div style="padding-top: 12px; margin-right: 8px;">
                             <a class="btn btn-info">
-                                <div ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Join</div>
+                                <div ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Join Free</div>
                             </a>
                         </div>
                     </li>
