fixed mobile nav

--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -136,3 +136,9 @@ body {
   width: 197px;
   margin-right: -17px;
 }
+
+.navbar-toggle {
+  position: absolute !important;
+  top: 4px;
+  right: 0;
+}
