--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -23,6 +23,42 @@
 
             <a id="tourstart" style="display: none;" ng-click="tour.restart(true)"></a>
 
+            <div class="mobile-menu">
+                <button type="button" class="navbar-toggle mobile-menu-toggle" data-toggle="collapse" data-target="#mobile-collapse">
+                    <i class="fa fa-chevron-down"></i>
+                </button>
+                <div class="collapse mobile-navbar" id="mobile-collapse">
+                    <ul class="nav navbar-nav">
+                        <li ng-if="!nav.user">
+                            <div style="margin: 20px 0 0 20px;">
+                                <a class="btn btn-info">
+                                    <div ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Join Free</div>
+                                </a>
+                            </div>
+                        </li>
+                        <li ng-if="!nav.user">
+                            <div style="margin-left: 20px;" ng-controller="LoginController as login">
+                                <a class="btn btn-success">
+                                    <div ng-click="login.authenticate('linkedin')" style="font-size: 16px; color: #fff;">Log In</div>
+                                </a>
+                            </div>
+                        </li>
+                        <li ng-if="nav.user" id="knowtify">
+                            <a>Alerts</a>
+                        </li>
+                        <li ng-if="nav.user">
+                            <a ng-click="nav.openChat()">Help</a>
+                        <span ng-show="nav.chatMessageCount">
+                            <span id="helpcrunch_message_count" ng-bind="nav.chatMessageCount"></span>
+                        </span>
+                        </li>
+                        <li ng-if="nav.user">
+                            <a href="/logout">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
             <div ng-if="!nav.embedded" class="navbar-right">
                 <ul class="nav navbar-nav no-borders">
                     <li ng-if="!nav.user" class="dropdown">
@@ -59,6 +95,7 @@
                     </li>
                 </ul>
             </div>
+
         </nav>
     </div>
 
