--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -9,7 +9,7 @@
             <div ng-show="welcome.selectedCompany" style="text-align:center;">
                 <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">
                     <img style="height:75px;"
-                         ngf-thumbnail="welcome.selectedCompany.thumb_url || file || '/public/images/blank_startup.png'">
+                         ngf-thumbnail="welcome.selectedCompany.thumb_url || file || '/public/images/blank_startup.jpg'">
                 </a>
                 <br/>
                 <label id="uploader_text">
