--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 dash-table">
     <div>
         <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value })" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
-                ng-src="{{item.value.profile.avatar || '/public/images/blank_startup.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/blank_startup.png'"/></a>
+                ng-src="{{item.value.profile.avatar || '/public/images/blank_startup.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/blank_startup.jpg'"/></a>
     </div>
     <div class="user-row" ng-class="{'user-row-border': $index % 2 == 0}">
         <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
