--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -29,6 +29,9 @@
                 </button>
                 <div class="collapse mobile-navbar" id="mobile-collapse">
                     <ul class="nav navbar-nav">
+                        <li ng-if="nav.user">
+                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}})">Your Profile</a>
+                        </li>
                         <li ng-if="!nav.user">
                             <div style="margin: 20px 0 0 20px;">
                                 <button class="btn btn-info" ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Join Free</button>
@@ -56,7 +59,18 @@
             </div>
 
             <div ng-if="!nav.embedded" class="navbar-right">
-                <ul class="nav navbar-nav no-borders">
+                <ul class="nav navbar-nav no-borders" tour-step order="4" title="Your Profile" content="People can ask you questions on your profile page. Click 'End tour' to take a look." placement="bottom">
+                    <li ng-if="nav.user" class="dropdown" style="padding-top: 10px;">
+                        <div class="pull-left" style="padding-top: 3px; white-space: nowrap;     text-align: right; padding-right: 20px;" >
+                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}})">{{nav.user.profile.name}}</a>
+                            <div style="margin-left: -10px; padding-top: 1px;">
+                                <span ng-repeat="(item, val) in nav.user.roles" class="user-role" ><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></span>
+                            </div>
+                        </div>
+                        <div class="pull-right" style="padding-right: 10px;">
+                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || '/public/images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; " onerror="this.src='/public/images/blank_avatar.png'"/></a>
+                        </div>
+                    </li>
                     <li ng-if="!nav.user" class="dropdown">
                         <div style="padding-top: 12px; margin-right: 8px;">
                             <button class="btn btn-info" ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Join Free</button>
@@ -94,19 +108,7 @@
     <!-- Navigation -->
     <aside id="menu" ng-if="!nav.embedded">
         <div class="profile-picture">
-            <div ng-if="nav.user" class="container side-menu" style="padding-top: 10px; margin-left: -20px; border-bottom: 1px solid #eee;    margin-bottom: -9px;" tour-step order="4" title="Your Profile" content="People can ask you questions on your profile page. Click 'End tour' to take a look." placement="right">
-                <div class="row side-menu">
-                    <div class="col-xs-3">
-                        <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || '/public/images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; " onerror="this.src='/public/images/blank_avatar.png'"/></a>
-                    </div>
-                    <div class="col-xs-9" style="padding-top: 3px; white-space: nowrap;">
-                        <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}})">{{nav.user.profile.name}}</a>
-                        <div style="margin-left: -10px; padding-top: 1px;">
-                            <span ng-repeat="(item, val) in nav.user.roles" class="user-role" ><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div ng-if="nav.location.profile.sc_logo" style="margin-left: -21px;"><img class="profile-logo" ng-src="{{nav.location.profile.sc_logo}}"/></div>
         </div>
 
