--- a/app/less/various.less
+++ b/app/less/various.less
@@ -786,7 +786,7 @@ footer, .push {
 }
 
 #side-menu li .nav-second-level li ul li a {
-  color: #888;
+  //color: #888;
 }
 
 #side-menu li .nav-second-level li ul li.active {
