--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -247,6 +247,7 @@
                     </li>
                 </ul>
             </li>
+            <button ui-sref="email">Email</button>
 
         </ul>
         <div>
