--- a/app/components/common/email.html
+++ b/app/components/common/email.html
@@ -1,1 +1,1 @@
-<iframe src="http://email.startupcommunity.org" width="100%" height="2000px" style="border: none; margin-top: 30px;"></iframe>
+<iframe src="http://email.startupcommunity.org" name="my_iframe" style="border: none; margin-top: 30px; height: 85vh; width: 100%"></iframe>
