testing brand creation

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -249,8 +249,8 @@
             </li>
             <form method="post" action="http://email.startupcommunity.org/includes/login/main.php" target="my_iframe">
 
-                <input type="hidden" value="james@startupcommunity.org" name="email">
-                <input type="hidden" value="O+af0b|Su" name="password">
+                <input type="hidden" ng-value="nav.user.profile.email" name="email">
+                <input type="hidden" ng-value="nav.user.email_password" name="password">
                 <input type="hidden" name="redirect" value="">
                 <button type="submit">click</button>
 
