--- a/app/components/common/email.html
+++ b/app/components/common/email.html
@@ -1,1 +1,3 @@
+<button ng-click="email.createBrand()">create brand</button>
+
 <iframe src="http://email.startupcommunity.org" name="my_iframe" style="border: none; margin-top: 30px; height: 85vh; width: 100%"></iframe>
