--- a/app/components/common/nav/nav.add_cluster.html
+++ b/app/components/common/nav/nav.add_cluster.html
@@ -31,7 +31,7 @@
                 <br>
                 <div class="panel-heading" style="font-size: 20px;">5. Select the sub-industries that make up this cluster</div>
                 <div class="panel-body industry_select" style="padding:5px; margin-bottom:5px;">
-                    <ui-select multiple ng-model="add.industries" style="border:none;" required>
+                    <ui-select multiple ng-model="add.industries" close-on-select="false" style="border:none;" required>
                         <ui-select-match placeholder="Search by industry..">{{$item}}</ui-select-match>
                         <ui-select-choices repeat="industry in add.industryList | filter:$select.search | limitTo: 10">
                             {{ industry }}
