--- a/app/components/common/nav/nav.community_settings.html
+++ b/app/components/common/nav/nav.community_settings.html
@@ -67,7 +67,7 @@
                                 <input type="text" class="form-control input-lg" placeholder="{{domain.color}}" disabled>
                             </td>
                             <td style="padding-left: 20px;">
-                                <input type="checkbox" class="form-control checkbox" checked="{{domain.full}}" disabled>
+                                <input type="checkbox" class="form-control checkbox" ng-checked="{{domain.full}}" disabled>
                             </td>
                             <td style="padding-left: 20px;">
                                 <i class="pe-7s-close-circle" ng-click="settings.removeEmbed($index)" style="font-size: 28px; cursor: pointer;"></i>
