fixed dup helpcrunch message count id

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -48,7 +48,7 @@
                         <li ng-if="nav.user">
                             <a ng-click="nav.openChat()">Help</a>
                         <span ng-show="nav.chatMessageCount">
-                            <span id="helpcrunch_message_count" ng-bind="nav.chatMessageCount"></span>
+                            <span class="helpcrunch_message_count" ng-bind="nav.chatMessageCount"></span>
                         </span>
                         </li>
                         <li ng-if="nav.user">
@@ -91,7 +91,7 @@
                             <i class="pe-7s-help1"></i>
                         </a>
                         <span ng-show="nav.chatMessageCount">
-                            <span id="helpcrunch_message_count" ng-bind="nav.chatMessageCount"></span>
+                            <span class="helpcrunch_message_count" ng-bind="nav.chatMessageCount"></span>
                         </span>
                     </li>
                     <li ng-if="nav.user" class="dropdown">
