--- a/app/less/various.less
+++ b/app/less/various.less
@@ -242,7 +242,7 @@ input.input-md, input.input-md:focus{
 
 /* HelpCrunch */
 
-body #helpcrunch_message_count {
+body .helpcrunch_message_count {
   display: inline-block !important;
   box-sizing: content-box;
   padding: 3px;
