--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -15,6 +15,8 @@
                     words:1}}</span>, <span ng-bind-html="(profile.user.profile.summary || profile.user.profile.linkedin.headline) | sentence | linky:'_blank'"></span>
                 </h3>
                 <a ng-click="profile.ask()" class="btn btn-success btn-sm">Ask me a question</a>
+                <a ng-click="profile.contact(nav.location.key)" title="Contact {{item.value.profile.name}}" class="btn btn-sm btn-info" style="margin-left: 5px;">Contact me
+                </a>
                 <div style="padding-top:10px; overflow: hidden; height: 50px; margin-bottom: -10px;">
                     <li ng-repeat="skill in profile.user.profile.skills" style="margin-right: 5px;" class="btn btn-outline btn-default btn-xs" ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: skill})">
                         {{::skill}}
