nav fixes and markets graph

--- a/app/components/common/header/header_small.html
+++ b/app/components/common/header/header_small.html
@@ -19,10 +19,9 @@
                     </li>
                 </ol>
             </div>
-            <h2 class="font-light pull-right m-b-xs">
-                <span style="text-transform: none;">{{ nav.community.profile.headline || nav.community.profile.description }}<span>
-                </span>
-            </h2>
+            <h6 class="font-light pull-right m-b-xs" style="margin-top:10px;">
+                <span style="text-transform: none;">{{ nav.community.profile.headline || nav.community.profile.description }}</span>
+            </h6>
         </div>
     </div>
 </div>
