--- a/app/less/progress_bar.less
+++ b/app/less/progress_bar.less
@@ -13,7 +13,9 @@
 }
 
 .progress-small, .progress-small .progress-bar {
-  height: 10px;
+  height: 12px;
+  font-size: 12px;
+  line-height: 1.1;
 }
 
 .progress-bar-default {
