--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -1,25 +1,19 @@
-<div small-header class="normalheader" style="padding: 25px 0;">
+<div small-header class="normalheader" style="padding: 0 0 25px 0;">
     <div class="row">
         <div class="col-md-6">
             <div class="hpanel">
-                <div class="panel-body" style="height: 85px;">
-                    <div ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="fa fa-gear pull-right" ng-click="nav.communitySettings(); $event.stopPropagation();" tooltip-placement="left" tooltip="Settings" style="opacity: .6; cursor: pointer; margin-top: 5px; font-size: 18px;"></div>
-                    <h2 class="font-light m-b-xs" style="margin-bottom: 0;">
-                        <span ng-if="nav.community.community_profiles[nav.location_path]">{{ nav.community.community_profiles[nav.location_path].name }}</span>
-                        <span ng-if="!nav.community.community_profiles[nav.location_path]">{{ nav.community.profile.name }}</span>
-                    </h2>
-                    <div id="hbreadcrumb" class="pull-right">
-                        <ol class="hbreadcrumb">
-                            <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{'community.dashboard({community: nav.location})'}}">
-                                <span ng-if="nav.location.profile.name">{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
-                            </li>
-                            <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
-                                <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
-                                <span ng-if="$last">&nbsp;{{ nav.community.type[0].toUpperCase() + nav.community.type.slice(1) }}</span>
-                            </li>
-                        </ol>
+                <div class="panel-body" style="width:100%; height: 85px;">
+                    <div class="pull-left">
+                        <h2 class="font-light m-b-xs">Markets</h2>
+                        <div ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="fa fa-gear pull-left" ng-click="nav.communitySettings(); $event.stopPropagation();" tooltip-placement="left" tooltip="Settings" style="opacity: .6; cursor: pointer; margin-top: 5px; font-size: 18px;"></div>
                     </div>
-                    <small>{{ nav.community.profile.headline || nav.community.profile.description }}</small>
+
+
+                    <div style="width:60%; position: absolute; right: 15px; padding-top: 5px;">
+                        <div ng-repeat="p in dashboard.top.parents">
+                            <progressbar value="p.value" max="dashboard.top.parents[0].value" type="success" class="progress-small full">{{p.label}}</progressbar>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -44,7 +38,6 @@
         </div>
     </div>
 </div>
-
 
 <div>
     <div id="dash-tour" tour-step order="0" title="The {{nav.community.profile.name.split(',')[0] }} Startup Community" content="Your community includes people and companies, organized by industry and skillset." placement="top">
