--- a/app/less/various.less
+++ b/app/less/various.less
@@ -780,9 +780,10 @@ footer, .push {
 
 #side-menu li .nav-second-level li ul li {
   // this is for people and companies sub-nav links
-  margin-left: -40px;
-  padding: 5px 0 5px 20px;
+  margin-left: -8px;
+  padding: 5px 0;
   border-left: 3px solid #eee;
+  list-style: none;
 }
 
 #side-menu li .nav-second-level li ul li a {
