--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -7,12 +7,12 @@
                         <h2 class="font-light m-b-xs">Markets</h2>
                         <div ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="fa fa-gear pull-left" ng-click="nav.communitySettings(); $event.stopPropagation();" tooltip-placement="left" tooltip="Settings" style="opacity: .6; cursor: pointer; margin-top: 5px; font-size: 18px;"></div>
                     </div>
-
-
-                    <div style="width:60%; position: absolute; right: 15px; padding-top: 5px;">
-                        <div ng-repeat="p in dashboard.top.parents">
-                            <progressbar value="p.value" max="dashboard.top.parents[0].value" type="success" class="progress-small full">{{p.label}}</progressbar>
-                        </div>
+                    <div class="pull-right" style="width: 65%;">
+                        <table style="width:100%;">
+                            <tr ng-repeat="p in dashboard.top.parents">
+                                <td style="margin-top:-3px; float: right; padding-right: 5px;">{{p.label}}</td><td style="width:100%;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full">{{(p.value / dashboard.max * 100).toFixed(0)}}%</progressbar></td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
